grub2 (1.99~rc1-13) UNRELEASED; urgency=low

  * Cherry-pick from upstream:
    - Use correct limits for mips initrd.
  * Run grub-install on install or upgrade of grub-yeeloong.

 -- Colin Watson <cjwatson@debian.org>  Thu, 14 Apr 2011 02:09:21 +0100

grub2 (1.99~rc1-12) unstable; urgency=low

  * Update branch_butter.patch:
    - Fix filename comparison.
    - Take extent offset in account on uncompressed extents.
    - Use filled extent size if available.
  * Allow use of first sector on btrfs (LP: #757446).
  * Merge from Ubuntu:
    - Build part_msdos and vfat into EFI boot images (LP: #677758).

 -- Colin Watson <cjwatson@debian.org>  Mon, 11 Apr 2011 16:22:08 +0100

grub2 (1.99~rc1-11) unstable; urgency=low

  * Update branch_fuse.patch:
    - Make grub-mount exit non-zero if opening the device or filesystem
      fails.
    - Translate GRUB error codes into OS error codes for FUSE (LP: #756456).
  * Merge from Ubuntu:
    - Fix use of freed memory when replacing existing loopback device
      (LP: #742967).

 -- Colin Watson <cjwatson@debian.org>  Sun, 10 Apr 2011 21:52:26 +0100

grub2 (1.99~rc1-10) unstable; urgency=low

  * Update branch_butter.patch, fixing RAID1/duplicated chunk size
    calculation (thanks, Vladimir Serbinenko; LP: #732149).

 -- Colin Watson <cjwatson@debian.org>  Sat, 09 Apr 2011 21:22:15 +0100

grub2 (1.99~rc1-9) unstable; urgency=low

  * Update branch_parse-color.patch, to blend text when any background is
    set as opposed to only when a stretched background is set (closes:
    #613120).
  * Make update-grub2 a symlink to update-grub, rather than bothering with a
    wrapper script.
  * Cherry-pick from upstream:
    - Check RAID superblock offset (closes: #610184).
    - Flush buffer cache on close and not on open (closes: #620663).
    - Handle special naming of yeeloong directory (closes: #620420).
  * Add grub-mount utility, from the upstream 'fuse' branch.