@@ -3,6 +3,9 @@ grub2 (1.99~rc1-13) UNRELEASED; urgency=low
   * Cherry-pick from upstream:
     - Use correct limits for mips initrd.
   * Run grub-install on install or upgrade of grub-yeeloong.
+  * Update branch_fuse.patch:
+    - Tell FUSE to run single-threaded, since GRUB code is not thread-safe
+      (LP: #756297).
 
  -- Colin Watson <cjwatson@debian.org>  Thu, 14 Apr 2011 02:09:21 +0100
 
